--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Database Table</title>
+    <title>Database Table By Dhunter</title>
 </head>
 <body>
     <h1>Database Table Contents</h1>
