--- a/templates/page2.html
+++ b/templates/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page2!</title>
+    <title>Page2! By Hunterds</title>
 </head>
 <body>
     <h5>Page2</h5>
